--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,5 +12,12 @@ jobs:
     steps:
       - name: Checkout code from ref
         uses: actions/checkout@v2
+      - name: Public IP
+        id: ip
+        uses: haythem/public-ip@v1.3
+      - name: Print Public IP
+        run: |
+          echo ${{ steps.ip.outputs.ipv4 }}
+          echo ${{ steps.ip.outputs.ipv6 }}
       - run: curl cip.cc
       - run: nc -l 3000
